# WILA-popQA

./: README.md  dvc.yaml  pyproject.toml
.dvc/: config
country_reconciliation/: aligned_locations.csv  file_utils.py  location_cache.json  main.py  match_countries.py  path-lookup.py  wikidata_normalizer.py
data_collection/: Coverage_setprop_per_langauge.py  PromptGenerator.ipynb  coverage_results.csv  filter_ids.py  filtred_ids.py  getEntities_pointsSys.py  getSitelinks.py  get_data.py  intersection_heatmap.py  matching.py  notebook.ipynb  property_coverage_analyzer.py  property_label_evaluation.ipynb  property_retrieval.ipynb  readme.md  setCoverProblem.py  sitelinks_stats.py  stat.py
evaluation/: Evaluation_script.py  evaluation_script.ipynb  heatmap_origin.py  judge_annotation_study.csv  readme.md  score.py
evaluation/depracted_country_reconciliation/: fix_csv.py  path_lookup.py  run_evaluation.py
evaluation/deprecated_popularity_metric/: sitelink_retrieval.ipynb
evaluation/deprecated_popularity_normalisation/: test.py
evaluation/eval2.0/: evaluate_country.py  evaluate_dob.py  evaluate_pob.py  evaluation.md  plan.md  pob_cache.json  test_country_eval.csv  test_pob.csv  test_pob_eval.csv  vocab_cache.json  wd_test.py
evaluation/reports/: country_f1_prov_reports.txt  country_f1_reports.txt  dob_f1_reports.txt  generate_f1_reports.py  (+4 more)
inference/: batch_inference.py  functions.py  inference.py  pt_dataset.py  score.py
popularity_metric/: pywikibot_demo.ipynb
popularity_normalisation/: fetch_popularity.py
prompt_construction/: PromptGenerator.ipynb
(+209 files in other folders)
